--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
-//localhost:8081/repository/npm-private/:_authToken=NpmToken.17053fa0-4c24-332b-a20f-11dd12506dfb
+registry="http://localhost:8081/repository/npm-private/
+strict-ssl=true
+ca=
+always-auth=true
+_auth=NpmToken.17053fa0-4c24-332b-a20f-11dd12506dfb
