--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-registry="http://localhost:8081/repository/npm-private/
+registry="http://localhost:8081/repository/npm-private/"
 strict-ssl=true
 ca=
 always-auth=true
