--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
-registry="http://localhost:8081/repository/npm-private/"
-strict-ssl=true
+registry="http://localhost:8081/"
+strict-ssl=false
 ca=
 always-auth=true
 _auth=NpmToken.17053fa0-4c24-332b-a20f-11dd12506dfb
