--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig":{
-    "registry":"http://localhost:8081"
+    "registry":"http://localhost:8081/repository/npm-private/"
   },
   "keywords": [],
   "author": "",
