--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-registry="http://localhost:8081/"
+registry=" http://localhost:8081/repository/npm-private/"
 strict-ssl=false
 ca=
 always-auth=true
