--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,4 @@
-registry="http://localhost:8081/repository/npm-private/"
+registry="http://localhost:8081/repository/npm-private/:_authToken=NpmToken.17053fa0-4c24-332b-a20f-11dd12506dfb"
 strict-ssl=false
 ca=
 always-auth=true
-_auth=NpmToken.17053fa0-4c24-332b-a20f-11dd12506dfb
