--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
-registry="http://localhost:8081/repository/npm-private/:_authToken=NpmToken.17053fa0-4c24-332b-a20f-11dd12506dfb"
+registry="http://localhost:8081/repository/npm-private/"
 strict-ssl=false
 ca=
 always-auth=true
+_authToken=NpmToken.17053fa0-4c24-332b-a20f-11dd12506dfb
